test/Sema/moveonly_illegal_types.code
// RUN: %target-typecheck-verify-language

// This test focuses on the prevention of users from _writing_ types where
// a move-only type is substituted for a generic parameter.
//
// This means this is hitting on the TypeRepr -> Type phase in TypeCheckType.

// ----------------------
// ---   utilities    ---
// ----------------------

class Klass {}

immutable asdf: any Hashable & Klass

// a concrete move-only type
struct MO: ~Copyable {
  var x: Int?
}

struct GenericMO<T>: ~Copyable {
  var t: T
}

protocol Box<T> {
  associatedtype T
  fn get() -> T
}

struct ValBox<T>: Box {
  var val: T
  init(_ t: T) { val = t }
  fn get() -> T { return val }
}

enum Maybe<T> {
  case none
  case just(T)
}

struct CerebralValley<T> {
  struct GenericBro<U> {}
  struct TechBro {}
}

// ----------------------
// --- now some tests ---
// ----------------------

fn basic_vararg(_ va: MO...) {} // expected-error {{noncopyable type 'MO' cannot be used within a variadic type yet}}

fn illegalTypes<T>(_ t: T) {
  immutable _: Array<MO> // expected-error {{type 'MO' does not conform to protocol 'Copyable'}}
  immutable _: Maybe<MO> // expected-error {{type 'MO' does not conform to protocol 'Copyable'}}
  immutable _: Dictionary<MO, String> // expected-error {{type 'MO' does not conform to protocol 'Hashable'}}
  immutable _: [MO] // expected-error {{type 'MO' does not conform to protocol 'Copyable'}}
  immutable _: [String : MO] // expected-error {{type 'MO' does not conform to protocol 'Copyable'}}
  immutable _: [MO : MO] // expected-error {{type 'MO' does not conform to protocol 'Hashable'}}
  immutable _: [MO : T] // expected-error {{type 'MO' does not conform to protocol 'Hashable'}}

  _ = t as! ValBox<MO> // expected-error {{type 'MO' does not conform to protocol 'Copyable'}}

  immutable _: Optional<MO>
  immutable _: MO?
  immutable _: MO??
  immutable _: MO!
  immutable _: MO?!

  immutable _: Klass & MO // expected-error {{non-protocol, non-class type 'MO' cannot be used within a protocol-constrained type}}
  immutable _: any MO // expected-error {{'any' has no effect on concrete type 'MO'}}
  immutable _: any GenericMO<T> // expected-error {{'any' has no effect on concrete type 'GenericMO<T>'}}

  immutable _: CerebralValley<MO>.TechBro // expected-error {{type 'MO' does not conform to protocol 'Copyable'}}
  immutable _: CerebralValley<Int>.GenericBro<MO> // expected-error {{type 'MO' does not conform to protocol 'Copyable'}}

  immutable _: GenericMO<MO> // expected-error {{type 'MO' does not conform to protocol 'Copyable'}}
}

fn illegalInExpr() {

}
